--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -47,6 +47,18 @@ $(function() {
     <%= f.submit %>
   </div>
 
+  <% if current_user.has_role? :verifier %>
+  <%= f.fields_for :verification_state do |vs| %>
+  <div class="control-group">
+    <%= vs.label :name, "verified?", :class => 'control-label' %>
+    <div class="controls">
+      <%= collection_select(:register, :verification_state_id, VerificationState.all, :id, :name) %>
+      <%#= vs.select :verification_state, :name %>
+    </div>
+  </div>
+  <% end %>
+  <% end %>
+
   <div class="control-group">
     <%= f.label :register_num, 'Number', :class => 'control-label' %>
     <div class="controls">
@@ -137,14 +149,14 @@ $(function() {
   <div class="control-group">
     <%= p.label :title, :class => 'control-label', :id => 'play_title' %>
     <div class="controls">
-      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead', :data => { :play_id => p.object.id } %>
+      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead span3', :data => { :play_id => p.object.id } %>
     </div>
   </div>
 
   <div class="control-group">
     <%= p.label :author, :class => 'control-label', :id => 'play_author' %>
     <div class="controls">
-      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead', :data => { :author_with_play_id => p.object.id } %>
+      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span3', :data => { :author_with_play_id => p.object.id } %>
     </div>
   </div>
 
@@ -222,12 +234,15 @@ $(function() {
     </div>
   </div>
 
+<!--
   <div class="control-group">
     <%= f.label :page_text, :class => 'control-label' %>
     <div class="controls">
       <%= f.text_area :page_text %>
     </div>
   </div>
+-->
+
   <div class="control-group">
     <%= f.label :signatory, :class => 'control-label' %>
     <div class="controls">
