--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -17,6 +17,10 @@ $(function() {
         $($.find("[data-author-with-play-id='" + play_id + "']")).val(play_data[1]);
         $($.find("[data-genre-with-play-id='" + play_id + "']")).val(play_data[2]);
     });
+
+    $('input#register_irregular_receipts_name').focus(function() {
+        $(this).val('');
+    })
 })
 </script>
 
@@ -195,11 +199,16 @@ $(function() {
 
     <tr>
       <td class='seating_category'>
-	<%= sc.object.seating_category.name %>
+	<% if sc.object.seating_category.name == "Irregular Receipts" %>
+          <%= f.text_field :irregular_receipts_name, :value => "Irregular Receipts" %>
+        <% else %>
+          <%= sc.object.seating_category.name %>
+        <% end %>
       </td>
 
     <% ts = @register.ticket_sales.detect {|ts| ts.seating_category_id == sc.object.seating_category.id} %>
     <% unless ts.nil? %>
+      <%= sc.hidden_field :id, :value => ts.id %>
       <td class='total_sold'>
     <%= sc.text_field :total_sold, :class => 'span1 ticket_sales_total_sold', :value => ts.total_sold %>
       </td>
