--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -18,9 +18,15 @@ $(function() {
         $($.find("[data-genre-with-play-id='" + play_id + "']")).val(play_data[2]);
     });
 
+    if ($('input#register_irregular_receipts_name').val() === '') {
+      $('input#register_irregular_receipts_name').val('Irregular Receipts');
+    }
+
     $('input#register_irregular_receipts_name').focus(function() {
+      if ($('input#register_irregular_receipts_name').val() === 'Irregular Receipts') {
         $(this).val('');
-    })
+      }
+    });
 })
 </script>
 
@@ -98,7 +104,7 @@ $(function() {
     <div class="controls">
       <%#= f.text_field :weekday %>
       <%#= collection_select(:register, :verification_state_id, VerificationState.all, :id, :name) %>
-      <%= f.select(:weekday, ["Mardi", "Vendredi", "Mercredi", "Dimanche", "Lundi", "Samedi", "Jeudi"]) %>
+      <%= f.select(:weekday, ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"]) %>
       <%#= vs.select :verification_state, :name %>
 
     </div>
@@ -200,7 +206,7 @@ $(function() {
     <tr>
       <td class='seating_category'>
 	<% if sc.object.seating_category.name == "Irregular Receipts" %>
-          <%= f.text_field :irregular_receipts_name, :value => "Irregular Receipts" %>
+          <%= f.text_field :irregular_receipts_name %>
         <% else %>
           <%= sc.object.seating_category.name %>
         <% end %>
@@ -209,6 +215,7 @@ $(function() {
     <% ts = @register.ticket_sales.detect {|ts| ts.seating_category_id == sc.object.seating_category.id} %>
     <% unless ts.nil? %>
       <%= sc.hidden_field :id, :value => ts.id %>
+      <%= sc.hidden_field :seating_category_id, :value => sc.object.seating_category_id %>
       <td class='total_sold'>
     <%= sc.text_field :total_sold, :class => 'span1 ticket_sales_total_sold', :value => ts.total_sold %>
       </td>
@@ -225,6 +232,8 @@ $(function() {
 	<%= sc.text_field :recorded_total_s, :class => 'form-inline span1 ticket_sales_recorded_total_s', :value => ts.recorded_total_s %>
       </td>
     <% else %>
+
+      <%= sc.hidden_field :seating_category_id, :value => sc.object.seating_category_id %>
 
       <td class='total_sold'>
     <%= sc.text_field :total_sold, :class => 'span1 ticket_sales_total_sold', :value => 0 %>
