--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -27,19 +27,42 @@ $(function() {
         $(this).val('');
       }
     });
+
+  <% unless @register.register_images[1].nil? %>
+    $("img#register_image2").hide();
+    $("ul.image-tabs a.back").click(function(e) {
+      $("img#register_image").attr("src", $("img#register_image2").attr("src"));
+      return false;
+    })
+
+    $("ul.image-tabs a.front").click(function(e) {
+      $("img#register_image").attr("src", $("img#register_image").data("src"));
+      return false;
+    })
+  <% end %>
 })
 </script>
 
 <div class='row-fluid' id="form-wrapper">
 
 <div class='offset1' id='register_form'>
-  <% if @register.register_image != nil %>
-    <%= link_to "Open Image in New Window", "#{config.path_prefix}/#{@register.register_image.filepath}", :target => 'top' %>
+
+    <div class="tabbable tabs-below">
+      <ul class="nav nav-tabs image-tabs">
+        <li><a class='front' href="">image front</a></li>
+        <li><a class='back' href="">image back</a></li>
+      </ul>
+    </div>
+
+  <% if @register.register_images.length > 0 %>
+    <%= link_to "Open Image in New Window", "#{config.path_prefix}/#{@register.register_images[0].filepath}", :target => 'top' %>
   <% end %>
 
 <%= form_for @register, :html => {:class => 'form-horizontal'} do |f| %>
 <fieldset>
-  <legend>Editing Register #<%= @register.register_num %> | <%= link_to 'Back to All Registers', registers_path %></legend>
+  <legend>Editing Register for the date <%= @register.date %> | <%= link_to 'Back to All Registers', registers_path %></legend>
+
+  <p class='register_id'>This Register's Database ID: <strong><%= @register.id %></strong></p>
 
   <% if @register.errors.any? %>
     <div id="error_explanation">
