--- a/app/views/registers/_register.html.erb
+++ b/app/views/registers/_register.html.erb
@@ -6,9 +6,9 @@
 
 <div class="register_all row">
 
-<% if register.register_image != nil %>
+<% if register.register_images.length > 0 %>
   <div class='register_image span1'>
-    <a href="<%= config.path_prefix %>/<%= register.register_image.filepath %>" target="_blank"><img src='<%= config.path_prefix %>/<%= register.register_image.filepath %>' width='100' /></a>
+    <a href="<%= config.path_prefix %>/<%= register.register_images[0].filepath %>" target="_blank"><img src='<%= config.path_prefix %>/<%= register.register_images[0].filepath %>' width='100' /></a>
   </div>
 
   <div class='register_data span5'>
