Updates to get plays automagically inserted in both new registers as well as old ones...all thanks to nested_form (https://github.com/ryanb/nested_form). I could kiss that guy...

--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -9,14 +9,25 @@ $(function() {
 
     $('.play_typeahead').typeahead({source: <%= raw titles.to_json %>});
     $('.author_typeahead').typeahead({source: <%= raw authors.to_json %>});
+    $('.play_typeahead').on('change', format_play_autofill);
 
-    $('.play_typeahead').change(function(e) {
-        var play_id = $(e.currentTarget).data('play-id')
-        var play_data = $(e.currentTarget).val().split(' | ')
-        $(e.currentTarget).val(play_data[0]);
-        $($.find("[data-author-with-play-id='" + play_id + "']")).val(play_data[1]);
-        $($.find("[data-genre-with-play-id='" + play_id + "']")).val(play_data[2]);
+    // To handle the case when we have to add a new play...don't like re-initializing,
+    // but works for now...
+    $(document).on('nested:fieldAdded', function(event){
+        console.log('hello!');
+        $('.play_typeahead').typeahead({source: <%= raw titles.to_json %>});
+        $('.author_typeahead').typeahead({source: <%= raw authors.to_json %>});
+
+        $('.play_typeahead').on('change', format_play_autofill);
     });
+
+    var format_play_autofill = function(e) {
+      var ordering = $(e.currentTarget).data('ordering');
+      var play_data = $(e.currentTarget).val().split(' | ');
+      $(e.currentTarget).val(play_data[0]);
+      $($.find("[data-author-with-ordering='" + ordering + "']")).val(play_data[1]);
+      $($.find("[data-genre-with-ordering='" + ordering + "']")).val(play_data[2]);
+    }
 
     if ($('input#register_irregular_receipts_name').val() === '') {
       $('input#register_irregular_receipts_name').val('Irregular Receipts');
@@ -58,7 +69,7 @@ $(function() {
     <%= link_to "Open Image in New Window", "#{config.path_prefix}/#{@register.register_images[0].filepath}", :target => 'top' %>
   <% end %>
 
-<%= form_for @register, :html => {:class => 'form-horizontal'} do |f| %>
+<%= nested_form_for @register, :html => {:class => 'form-horizontal'} do |f| %>
 <fieldset>
   <legend>Editing Register for the date <%= @register.date %> | <%= link_to 'Back to All Registers', registers_path %></legend>
 
@@ -86,7 +97,6 @@ $(function() {
     <%= vs.label :name, "verified?", :class => 'control-label' %>
     <div class="controls">
       <%= collection_select(:register, :verification_state_id, VerificationState.all, :id, :name) %>
-      <%#= vs.select :verification_state, :name %>
     </div>
   </div>
   <% end %>
@@ -125,11 +135,7 @@ $(function() {
   <div class="control-group">
     <%= f.label :weekday, :class => 'control-label' %>
     <div class="controls">
-      <%#= f.text_field :weekday %>
-      <%#= collection_select(:register, :verification_state_id, VerificationState.all, :id, :name) %>
       <%= f.select(:weekday, ["Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi", "Dimanche"]) %>
-      <%#= vs.select :verification_state, :name %>
-
     </div>
   </div>
   <div class="control-group">
@@ -139,13 +145,14 @@ $(function() {
     </div>
   </div>
 
-<!-- PUT PLAYS, RECEIPT DATA HERE -->
-
+<!-- PUT PLAYS DATA HERE -->
 
   <div id='play_fields' class='well'>
 
+  <% ordering = 0 %>
   <%= f.fields_for :register_plays, @register.register_plays.sort {|a, b| a.ordering <=> b.ordering } do |rp| %>
-  <h3>Play <%= rp.object.ordering %></h3>
+  <% ordering += 1 %>
+  <h3>Play <%= ordering %></h3>
 
   <div class="control-group">
     <%= rp.label :ordering, :class => 'control-label', :id => 'register_play_ordering' %>
@@ -186,28 +193,34 @@ $(function() {
   <div class="control-group">
     <%= p.label :title, :class => 'control-label', :id => 'play_title' %>
     <div class="controls">
-      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead span4', :data => { :play_id => p.object.id } %>
+      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead span4', :data => { :ordering => ordering } %>
     </div>
   </div>
 
   <div class="control-group">
     <%= p.label :author, :class => 'control-label', :id => 'play_author' %>
     <div class="controls">
-      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4', :data => { :author_with_play_id => p.object.id } %>
+      <%#= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4' %>
+      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4', :data => { :author_with_ordering => ordering } %>
     </div>
   </div>
 
   <div class="control-group">
     <%= p.label :genre, :class => 'control-label', :id => 'play_genre' %>
     <div class="controls">
-      <%= p.text_field :genre, :id => 'play_genre', :data => { :genre_with_play_id => p.object.id } %>
+      <%#= p.text_field :genre, :id => 'play_genre' %>
+      <%= p.text_field :genre, :id => 'play_genre', :data => { :genre_with_ordering => ordering } %>
     </div>
   </div>
   <% end %>
 
   <% end %>
 
+  <%= f.link_to_add "Add a New Play", :register_plays %></p>
+
   </div>
+
+<!-- TICKET SALES -->
 
   <div class='row-fluid'>
 
@@ -223,8 +236,6 @@ $(function() {
 
   <tbody>
   <%= f.fields_for :ticket_sales, @register.register_period.register_period_seating_categories.sort_by {|rpsc| rpsc.ordering} do |sc| %>
-
-  <%#= f.fields_for :ticket_sales, @register.ticket_sales.sort {|a, b| a.sc_ordering <=> b.sc_ordering } do |ts| %>
 
     <tr>
       <td class='seating_category'>
