--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -9,16 +9,14 @@ $(function() {
 
     $('.play_typeahead').typeahead({source: <%= raw titles.to_json %>});
     $('.author_typeahead').typeahead({source: <%= raw authors.to_json %>});
-    $('.play_typeahead').on('change', format_play_autofill);
+    $('.play_typeahead').on('change', function(e) { format_play_autofill(e) });
 
     // To handle the case when we have to add a new play...don't like re-initializing,
     // but works for now...
     $(document).on('nested:fieldAdded', function(event){
-        console.log('hello!');
         $('.play_typeahead').typeahead({source: <%= raw titles.to_json %>});
         $('.author_typeahead').typeahead({source: <%= raw authors.to_json %>});
-
-        $('.play_typeahead').on('change', format_play_autofill);
+        $('.play_typeahead').on('change', function(e) { format_play_autofill(e) });
     });
 
     var format_play_autofill = function(e) {
@@ -149,10 +147,8 @@ $(function() {
 
   <div id='play_fields' class='well'>
 
-  <% ordering = 0 %>
   <%= f.fields_for :register_plays, @register.register_plays.sort {|a, b| a.ordering <=> b.ordering } do |rp| %>
-  <% ordering += 1 %>
-  <h3>Play <%= ordering %></h3>
+  <h3>Play <%= rp.object.ordering + 1 %></h3>
 
   <div class="control-group">
     <%= rp.label :ordering, :class => 'control-label', :id => 'register_play_ordering' %>
@@ -193,7 +189,7 @@ $(function() {
   <div class="control-group">
     <%= p.label :title, :class => 'control-label', :id => 'play_title' %>
     <div class="controls">
-      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead span4', :data => { :ordering => ordering } %>
+      <%= p.text_field :title, :id => 'play_title', :class => 'play_typeahead span4', :data => { :ordering => rp.object.ordering } %>
     </div>
   </div>
 
@@ -201,7 +197,7 @@ $(function() {
     <%= p.label :author, :class => 'control-label', :id => 'play_author' %>
     <div class="controls">
       <%#= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4' %>
-      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4', :data => { :author_with_ordering => ordering } %>
+      <%= p.text_field :author, :id => 'play_author', :class => 'author_typeahead span4', :data => { :author_with_ordering => rp.object.ordering } %>
     </div>
   </div>
 
@@ -209,7 +205,7 @@ $(function() {
     <%= p.label :genre, :class => 'control-label', :id => 'play_genre' %>
     <div class="controls">
       <%#= p.text_field :genre, :id => 'play_genre' %>
-      <%= p.text_field :genre, :id => 'play_genre', :data => { :genre_with_ordering => ordering } %>
+      <%= p.text_field :genre, :id => 'play_genre', :data => { :genre_with_ordering => rp.object.ordering } %>
     </div>
   </div>
   <% end %>
