Added Register DB ID to main facet page; realized that's going to be a hell of a lot faster for the enterers.

--- a/app/views/registers/_register.html.erb
+++ b/app/views/registers/_register.html.erb
@@ -26,6 +26,9 @@
   <% end %>
 
   <dl class="dl-horizontal">
+    <dt>Database ID:</dt>
+    <dd><%= register.id %></dd>
+
     <dt>Repr&#233;sentation:</dt>
     <dd><%= register.representation %></dd>
 
