Got the icons working, through a lot of irritating trial and error.  This Rails Bootstrap plugin seems to be really broken if you have a sub-path in your application.

--- a/app/assets/stylesheets/master.css
+++ b/app/assets/stylesheets/master.css
@@ -95,3 +95,11 @@ img#register_image {
   z-index: 99999;
   border: 1px solid grey;
 }
+
+.icon-pencil, .icon-remove {
+  background-image:url('/cfrp/images/twitter/bootstrap/glyphicons-halflings.png');
+  display: inline-block;
+}
+
+.icon-pencil { background-position:0 -72px; }
+.icon-remove { background-position:-312px 0; }
