--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -4,18 +4,18 @@ body { padding-top: 0px; }
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
-@iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
+@iconSpritePath: '/cfrp/images/twitter/bootstrap/glyphicons-halflings.png';
+@iconWhiteSpritePath: '/cfrp/images/twitter/bootstrap/glyphicons-halflings-white.png';
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-@fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
-@fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
-@fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
-@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
-@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
+//@fontAwesomeEotPath: asset-path('fontawesome-webfont.eot');
+//@fontAwesomeWoffPath: asset-path('fontawesome-webfont.woff');
+//@fontAwesomeTtfPath: asset-path('fontawesome-webfont.ttf');
+//@fontAwesomeSvgzPath: asset-path('fontawesome-webfont.svgz');
+//@fontAwesomeSvgPath: asset-path('fontawesome-webfont.svg');
 
 // Font Awesome
-@import "fontawesome";
+// @import "fontawesome";
 
 // Your custom LESS stylesheets goes here
 //
